Fix for initial jump with 50px for home-page animation

--- a/src/sass/modules/_steps.scss
+++ b/src/sass/modules/_steps.scss
@@ -42,11 +42,10 @@
         width: 100%;
         text-align: center;
     }
-    &.fixed {
+    &.centered {
         top: 50% !important;
         transform: translate3d(0,-50%,0);
     }
-
 }
 
 .steps-container {
